--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "latest",
