--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@uploadthing/react": "^5.6.2",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -34,6 +35,8 @@
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.0",
